--- a/src/app.scss
+++ b/src/app.scss
@@ -3,13 +3,14 @@ html {
   padding: 0;
   margin: 0;
 }
-body {
+body, h1, h2, div, main, ul ,li {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Helvetica Neue, Arial, Noto Sans, Liberation Sans, sans-serif,
     Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 1.5;
+}
+
+.page_container{
+  padding: 1rem;
 }
