--- a/src/assets/theme.scss
+++ b/src/assets/theme.scss
@@ -3,3 +3,9 @@ $primary: #e4163d;
 $white: #ffffff;
 
 $background-primary: #eeeeee;
+
+$grey: #e9ecef;
+
+$mutedLink: #6c757d;
+
+$blueLink: #3695fb;
